2009-11-25  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass: Prepare for Prefix support.
	(EMACS): Prefix with EPREFIX.
	(elisp-site-file-install): Add EPREFIX in sed expression.
	(elisp-site-regen): Prefix SITELISP with EPREFIX.

2009-11-17  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Display a warning
	message if no site-init files were found. Remove the warning about
	obsolete files; the install location was changed two years ago.

2009-09-27  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-make-autoload-file): Don't substitute
	the "new page" character with sed, since the string could occur in
	the package name. Use a shell variable instead.
	(elisp-site-regen): Start new page before local variables block.

2009-09-15  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_compile): Fix typo, bug 285045.
	Thanks to Andrew N Golovkov <andrew.golovkov@gmail.com>.

2009-09-14  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_compile): Generate Info files from
	Texinfo sources listed in ELISP_TEXINFO.
	(elisp_src_install): Install them.

2009-09-08  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-regen): Mark site-gentoo.el as
	buffer-read-only, in order to prevent unintentional edits.
	(elisp-make-autoload-file, elisp-site-regen): Add a null string
	to inhibit local variables detection in the eclass file itself.

2009-08-24  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_pkg_setup): We compare major versions only,
	so there's no need for versionator.eclass.
	(inherit): Don't inherit versionator.

2009-04-08  Ulrich Mueller  <ulm@gentoo.org>

	* elisp-common.eclass (elisp-site-file-install): Suppress error
	message if cp source and destination are identical.

2009-03-29  Ulrich Mueller  <ulm@gentoo.org>

	* elisp.eclass (elisp_src_unpack): Change directory to S before
	calling src_prepare.

2009-03-26  Ulrich Mueller  <ulm@gentoo.org>
