@@ -1,11 +1,11 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 #
 # Copyright 2002-2003 Matthew Kennedy <mkennedy@gentoo.org>
 # Copyright 2003      Jeremy Maitin-Shepard <jbms@attbi.com>
 # Copyright 2007-2009 Christian Faulhammer <fauli@gentoo.org>
-# Copyright 2007-2009 Ulrich Müller <ulm@gentoo.org>
+# Copyright 2007-2010 Ulrich Müller <ulm@gentoo.org>
 #
 # @ECLASS: elisp.eclass
 # @MAINTAINER:
@@ -98,6 +98,8 @@ elisp_src_prepare() {
 	for patch in ${ELISP_PATCHES}; do
 		if [ -f "${patch}" ]; then
 			epatch "${patch}"
+		elif [ -f "${WORKDIR}/${patch}" ]; then
+			epatch "${WORKDIR}/${patch}"
 		elif [ -f "${FILESDIR}/${patch}" ]; then
 			epatch "${FILESDIR}/${patch}"
 		else
