@@ -1,3 +1,7 @@
+2010-01-30  Ulrich Mueller  <ulm@gentoo.org>
+
+	* elisp.eclass (elisp_src_prepare): Look for patch in WORKDIR too.
+
 2009-11-25  Ulrich Mueller  <ulm@gentoo.org>
 
 	* elisp-common.eclass: Prepare for Prefix support.
@@ -651,5 +655,5 @@
 
 	* elisp.eclass: Initial.
 
-Copyright 2002-2009 Gentoo Foundation
+Copyright 2002-2010 Gentoo Foundation
 Distributed under the terms of the GNU General Public License v2
